Corrections and improvements

--- a/Thesis/bibfile/Ref.bib
+++ b/Thesis/bibfile/Ref.bib
@@ -18,7 +18,7 @@
    publisher={Springer Science and Business Media LLC},
    author={Aaboud, M. and Aad, G. and Abbott, B. and Abbott, D. C. and Abdinov, O. and Abeloos, B. and Abhayasinghe, D. K. and Abidi, S. H. and AbouZeid, O. S. and et al.},
    year={2019},
-   month={May}
+   month={05}
 }
 
 @misc{TMVA,
