--- a/Thesis/Inhalt.tex
+++ b/Thesis/Inhalt.tex
@@ -12,8 +12,7 @@
 \usepackage{float}
 \usepackage{longtable}
 \usepackage{fixltx2e}
-%\usepackage{aas_macros}
-\bibliographystyle{testrun}
+\bibliographystyle{habbrv}
  
 % itemize in coloumns 
 \usepackage{etoolbox,refcount}
@@ -65,17 +64,17 @@
 \section{Introduction}
 
 	\subsection{Motivation}
-		Goal of this project is the improvement in the distinction process between $t\overline{t}\gamma$ and $t\overline{t}$ events in the signal region. Depending on the success, the results can be further used for other projects, which would improve the simulations and their predictions regarding the Standard Model (SM) and Beyond Standard Model (BSM). 
+		The goal of this project is the improvement in the distinction process between $t\overline{t}\gamma$ and $t\overline{t}$ events in the signal region. Depending on the success, the results can be further used for other projects, which would improve the simulations and their predictions regarding the Standard Model (SM) and Beyond Standard Model (BSM). 
 
 	\subsection{Approach}
 	\label{sec:approach}
-		An attempt was perfomed through a multivariate analysis by developing and training models. At the beginning different variables were analysed and compared and the most promising were used for training. The type of models, denoted MVA in the following, used for this project are boosted decision trees (BDT) and mutilayer perceptron (MLP). The results of the MVAs for three different variable categories were created and in the course of this project analysed and presented.
+		An attempt was perfomed through a multivariate analysis by developing and training models. At the beginning, different variables were analysed and compared, and the most promising were then used for training. The type of models, denoted MVA in the following, used for this project are boosted decision trees (BDT) and mutilayer perceptrons (MLP). The results of the MVAs for three different variable categories were created, then analysed and presented in the course of this project.
 
 \section{Background information}
 	\subsection{ATLAS detector and data}
-	The ATLAS detector is part of the Large Hadron Collider, a particle accelerator, which was built by the research organisation CERN in Geneva, Switzerland. LHC has a circumference of 27km and is up to 175m deep. Besides ATLAS, there are other experiments as well, such as CMS, ALICE and LHCb. ATLAS has three sub-detectors, which all surround the beam pipe, where the particles are accelerated and collided against eachother.
+	The ATLAS detector is a part of the Large Hadron Collider, a particle accelerator which was built by the research organisation CERN in Geneva, Switzerland. LHC has a circumference of 27km and is up to 175m deep. Besides ATLAS, there are other experiments as well, such as CMS, ALICE and LHCb. ATLAS has three sub-detectors, which all surround the beam pipe, where the particles are accelerated and collided against each other.
 	
-	In Figure \ref{fig:detectorsystem}, a sketch of the detector system can be seen. The inner detecor is a tracking chamber for charged partices. It is surrounded by a superconducting solenoid with a magnetic field of 2T used to divert the particle trajectory to measure the momentum. The calorimeter is made up of alternating layers. One is a dense absorber material, which is used to prompt electromagnetic and hadronic showers (ECAL, HCAL). The other layer is of active material used for energy measurement. The muon spectrometer (MS) is positioned in the outermost layer since muons may pass inner layers as well as the calorimeters. It is surrounded by a magnetic field and the diversion is measured by a multiple layer of high precision tracking chambers~\cite{ATLAS, TTG}. 
+	In Figure \ref{fig:detectorsystem}, a sketch of the detector system can be seen. The inner detecor is a tracking chamber for charged partices. It is surrounded by a superconducting solenoid with a magnetic field of 2T used to divert the particle trajectory to measure the momentum. The calorimeter is made up of alternating layers. One is a dense absorber material, which is used to prompt electromagnetic and hadronic showers (ECAL, HCAL). The other layer is made of active material used for energy measurement. The muon spectrometer (MS) is positioned in the outermost layer since muons may pass all inner layers. It is surrounded by a magnetic field and the diversion is measured by a multiple layer of high precision tracking chambers~\cite{ATLAS, TTG}. 
 	
 	\begin{figure}[H]
 	\centering
@@ -84,7 +83,7 @@
 	\label{fig:detectorsystem}
 	\end{figure}
 	
-	The data is filtered by a two-step triggersystem. The hardware-based system (L1) is triggered when muons, electrons, photons and jets are detected. This reduced the data amount from 40MHz to 100kHz. The software-based system (L2) is triggered by the different energies, type and numbers of particles:
+	The data is filtered by a two-step trigger system. The hardware-based system (L1) is triggered when muons, electrons, photons and jets are detected. This reduced the data amount from 40MHz to 100kHz. The software-based system (L2) is triggered by the different energies, type and numbers of particles:
 	
 \begin{itemize}
   \item lepton has 30/35 GeV
@@ -96,9 +95,10 @@
 This reduced the data amount from 100kHz auf 1kHz. The data used during this project was recorded in 2016 at a centre-of mass energy of 13TeV. The signal and background processes were modelled using Monte Carlo generators and passed through a detector simulation~\cite{ATLAS}. 
 
 	\subsection{Proton-Proton-collision and $t\overline{t}\gamma$}
-	The protons are accelerated in bunches, each containing 10$^{11}$ particles, through different beam pipes in opposite directions and then collided with each other. During the pp-process a top quark pair is produced. The top quark then decays to a W-boson and a b-quark. The W-boson disintegrates into a charged lepton and a corresponding neutrino or a pair of up-type quark and down-type antiquark. The remaining quarks decomposes into jets. This process can be seen in Figure \ref{fig:PPprocess}.
+	 \label{sec:PPprocess}
+	The protons are accelerated in bunches, each containing 10$^{11}$ particles, through different beam pipes in opposite directions and then collided with each other. During the pp collision a top quark pair is produced. The top quark then decays to a W-boson and a b-quark. The W-boson disintegrates into a charged lepton and a corresponding neutrino or a pair of up-type quark and down-type antiquark. The remaining quarks decomposes into jets. This process can be seen in Figure \ref{fig:PPprocess}.
 	
-	The $t\overline{t}\gamma$ events were selected - top quark pair events with additional photons. The top quark is the heaviest quark in the known elementary particles and is the only quark so far whose properties can be analysed since their lifetime is very short and it forms no bound state before it decays. By that the electromagnetic coupling, therefore the number of radiated photons after interaction with other charged particles, can be measured~\cite{TTG}. By analysing the top quark, the results can be used to test the Standard Model and its possible extensions~\cite{ATLAS}.
+	The $t\overline{t}\gamma$ events were selected for this project - top quark pair events with additional photons. The top quark is the heaviest quark in the known elementary particles and is the only quark so far whose properties can be analysed since their lifetime is very short and it forms no bound state before it decays. By that, the electromagnetic coupling, therefore the number of radiated photons after interaction with other charged particles, can be measured~\cite{TTG}. By analysing the top quark, the results can be used to test the Standard Model and its possible extensions~\cite{ATLAS}.
 	
 	\begin{figure}[H]
 	\centering
@@ -136,7 +136,7 @@ In Figure \ref{fig:PhotonPT}, the transverse momentum of the photon is visible. 
 
 	\subsection{Current status}
 	
-	First a neural network was developed to seperate the hadronic-fake photons, which are hadrons misidentified as photons and made up the majority of the background signal. The result was then used as an input for the neural network created to split the $t\overline{t}\gamma$ signal and the background further~\cite{ATLAS}. What still needs to be investigated is the possibility of improvement in the discrimination between $t\overline{t}\gamma$ and $t\overline{t}$ events in the signal region through MVAs.
+	First, a neural network was developed to seperate the hadronic-fake photons, which are hadrons misidentified as photons that made up the majority of the background signal. The result was then used as an input for the neural network created to split the $t\overline{t}\gamma$ signal and the background further~\cite{ATLAS}. What still needs to be investigated is the possibility of improvement in the discrimination between $t\overline{t}\gamma$ and $t\overline{t}$ events in the signal region through MVAs.
 
 \section{Analysis process}
 
@@ -145,7 +145,7 @@ In Figure \ref{fig:PhotonPT}, the transverse momentum of the photon is visible. 
 The analysed variables are listed below and they are categorized by their type of particles. 
 
 \begin{itemize}
-  \item B-jet: variables of jets containing b-hadrons (b-tag)
+  \item B-jet: variables of jets with b-tag
 	\begin{AutoMultiColItemize}
   		\item Bj0\_eta
   		\item Bj0\_phi
@@ -209,11 +209,11 @@ The analysed variables are listed below and they are categorized by their type o
  	\end{AutoMultiColItemize}
 \end{itemize}
 
-The pre- or suffix of the name reveal what information is saved. The description of variables, which don't follow this logic, are listed at the end. 
+The pre- or suffix of the name reveal what information is saved. The description of variables, which don't follow this logic, are listed at the end. Additionally for jet variables, 0 refers to the jet with the highest $p_T$ and 1 to the second highest $p_T$.
 
 Prefix and suffix:
 \begin{itemize}
-	  \item \_eta: pseudorapidity ($\eta = -ln(tan(\frac{\vartheta}{2}))$; wheras $\vartheta$ is the polar angle)
+	  \item \_eta: pseudorapidity of variable ($\eta = -ln(tan(\frac{\vartheta}{2}))$; wheras $\vartheta$ is the polar angle)
 	  \item \_phi: azithmuthal opening angle around z-axis ($\Delta\phi$)
 	  \item \_pt: transverse momentum of variable
 	  \item dR: distance between two objects ($\Delta$R)
@@ -222,28 +222,31 @@ Prefix and suffix:
 
 Other:
 \begin{itemize}
-  \item ht
-  \item m3
-  \item mT
-  \item PhotonGood0: number of photons
+  \item ht: total transverse momentum of all jets; high ht means either a large number of jets or jets with high energies were detected
+  \item m3: maximum mass of three jets; during the decay process of a top quark to a b-quark and W-boson, which further decays to two quarks (see chapter \ref{sec:PPprocess}), the m3 variable would then have a peak at the top quark mass  
+  \item mT: transverse mass of an object depending on input variables; if a lepton and neutrino were used in the following formula, then the transverse mass of a W-boson is calculated:
+	  \begin{align*}
+			m_T(W) = \sqrt{2p_T(\ell)p_T^{miss}[1 - cos(\Delta\phi(\ell, \vec{p}_T^{miss}))]}
+		\end{align*}
+  
+  %\item nPhotonGood0: number of photons
   \item PhotonGood0\_mvaID: currently used variable to differentiate between signal and background events
   \item MET: Missing transverse momentum
-   		\item JetGood0\_neEmEF
-		\item JetGood0\_chEmEF
-		\item JetGood0\_neHEF
-		\item JetGood0\_chHEF
-  		\item LeptonTight0\_pfRelIso03\_all
-		\item LeptonTight0\_pfRelIso03\_chg
-		\item LeptonTight0\_pfRelIso03\_ne
-		\item JetGood0\_btagDeepB
-		\item JetGood1\_btagDeepB		
+   		\item JetGood0\_neEmEF: proportion of energy coming from neutral particles detected in ECAL (e.g. photon)
+		\item JetGood0\_chEmEF: proportion of energy coming from charged particles detected in ECAL (e.g. electron)
+		\item JetGood0\_neHEF: proportion of energy coming from neutral particles detected in HCAL (e.g. neutral meson, neutron)
+		\item JetGood0\_chHEF: proportion of energy coming from charged particles detected in HCAL (e.g. charged meson, proton)
+  		\item LeptonTight0\_pfRelIso03\_all: relative isolation of the lepton to all particles in a radius of dR = 0.3 %$\sum_{i} (\frac{p_{T_i}}{p_{T_i}^{LEPTON}})$
+		\item LeptonTight0\_pfRelIso03\_chg: relative isolation of the lepton to charged particles in a radius of dR = 0.3 %$\sum_{i} (\frac{p_{T_i}^{CHARGED}}{p_{T_i}^{LEPTON}})$
+		\item LeptonTight0\_pfRelIso03\_ne: relative isolation of the lepton to neutral particles in a radius of dR = 0.3 %$\sum_{i} (\frac{p_{T_i}^{NEUTRAL}}{p_{T_i}^{LEPTON}})$
+		\item JetGood0\_btagDeepB, JetGood1\_btagDeepB: result of neural network to identify jets coming from b-quark (b-tag)
 \end{itemize}
 
 	\subsection{Analysis of variables}
 	
-The variables were analysed by comparing the distribution of events with an uniform scaling. An uniform scaling was needed to have a better view of relative differences between signal and background. If the variable shows a different behaviour for each type of signal, this could be an indication of discriminatory power. 
+The variables were analysed by comparing the distribution of events with a uniform scaling. A uniform scaling was needed to have a better view of relative differences between signal and background. If the variable shows a different behaviour for each type of signal, it could be an indication of discriminatory power. 
 
-Figure \ref{fig:Bj0eta} to \ref{fig:LeptonTight0eta} show some examples of variables, where the distributions are almost identical and were therefore not further analysed. A full list of these variables are listed in the Annex, chapter \ref{sec:annex-identical}. 
+Figure \ref{fig:Bj0eta} to \ref{fig:LeptonTight0eta} show some examples of variables, where the distributions are almost identical and were therefore not analysed any further. A full list of these variables are listed in the Annex, chapter \ref{sec:annex-identical}. 
 
 \begin{figure}[H]
 \centering
@@ -277,7 +280,7 @@ Figure \ref{fig:Bj0eta} to \ref{fig:LeptonTight0eta} show some examples of varia
 \end{minipage}
 \end{figure}
 
-Variables, where there are some differences visible in the signal region are in Figure \ref{fig:nBTagGood} to \ref{fig:ht}. These were candidates for the first set of selected variables. 
+Variables, where some differences were visible in the signal region, are shown in Figure \ref{fig:nBTagGood} to \ref{fig:ht}. These were candidates for the first set of selected variables. 
 
 	\begin{figure}[H]
 	\centering
@@ -375,7 +378,7 @@ The variable PhotonGood0\_mvaID, seen in Figure \ref{fig:PhotonGood0mvaID}, show
  	\label{fig:PhotonGood0mvaID}
 	\end{figure}
 	
-Figure \ref{fig:PhotonGood0pt} to \ref{fig:photonLepdR} show the photon variables. These show the most promising behaviour for discriminating between $t\overline{t}\gamma$ and $t\overline{t}$ events and were put additionally into the third selection category.
+Figure \ref{fig:PhotonGood0pt} to \ref{fig:photonLepdR} show the photon variables. These show the most promising behaviour for discriminating between $t\overline{t}\gamma$ and $t\overline{t}$ events and were additionally put into the third selection category.
 
 	\begin{figure}[H]
 	\centering
@@ -427,10 +430,10 @@ Figure \ref{fig:PhotonGood0pt} to \ref{fig:photonLepdR} show the photon variable
 
 \section{MVA}
 
-Trying to split signal and background through a variable with a cut-off value faces the problem that this criteria doesn't apply for every event. If it works for one event, it doesn't mean that it works for the next one. Therefore mutliple variables need to be used to distinguish between those two categories, so called multivariate analysis (MVA). As already mentioned in chapter \ref{sec:approach}, the chosen MVA-types are boosted decision trees (BDT) and multilayer perceptron (MLP).
+Trying to split signal and background through a variable with a cut-off value faces the problem that this criteria doesn't apply for every event. If it works for one event, it doesn't mean that it works for the next one. Therefore, mutliple variables need to be used to distinguish between those two categories, so called multivariate analysis (MVA). As already mentioned in chapter \ref{sec:approach}, the chosen MVA-types are boosted decision trees (BDT) and multilayer perceptron (MLP).
 
 	\subsection{BDT - Boosted Decision Trees}
-	The decision tree starts with the root node containing the whole sample. For a binary tree, the node is then split into two branches using a variable and a corresponding cut-off value. The cut-off value should be a value, which seperates the signal from the background the best. This process will be repeated for each branch for all relevant variables, including already used variables, until an end criteria is met. The final branch is called a leaf and this will be assigned to one of the two categories. End criterias could be a minimum size of a leaf, perfect separation, insignificant improvement after split or maximal tree depth. Boosted decision trees are built out of additional trees, so called weak classifieres. They include variables with a low discriminatory power and will be used to improve the main decision tree to a more stable model with a lower error rate~\cite{BDT}. 
+	The decision tree starts with the root node containing the whole sample. For a binary tree, the node is then split into two branches using a variable and a corresponding cut-off value. The cut-off value should be a value that seperates the signal from the background the best. This process will be repeated for each branch for all relevant variables, including already used variables, until an end criteria is met. The final branch is called a leaf and this will be assigned to one of the two categories. End criterias could be a minimum size of a leaf, perfect separation, insignificant improvement after split or maximal tree depth. Boosted decision trees are built out of additional trees, so called weak classifieres. They include variables with a low discriminatory power and will be used to improve the main decision tree to a more stable model with a lower error rate~\cite{BDT}. 
 
 	\begin{figure}[H]
 	\centering
@@ -440,13 +443,13 @@ Trying to split signal and background through a variable with a cut-off value fa
 	
 	\subsection{MLP - Multilayer Perceptron}
 	
-	The model is built out of multiple perceptrons, which are arranged in layers shown in Figure \ref{fig:MLP}. The value of one perceptron is the sum of all weighted inputs. This value is then transformed through an activation function and a treshhold. The activation funtion is a linear function for the input- and outputlayer, while for the hiddenlayers it is usually the log-sigmoid transfer function, seen in Figure \ref{fig:log-sigmoid function}. All layers have a treshhold, except the inputlayer. 
+	The model is built out of multiple perceptrons, which are arranged in layers shown in Figure \ref{fig:MLP}. The value of one perceptron is the sum of all weighted inputs. This value is then transformed through an activation function and a treshhold. The activation funtion is a linear function for the input- and outputlayer, while it is usually the log-sigmoid transfer function for the hiddenlayers, as seen in Figure \ref{fig:log-sigmoid function}. All layers have a treshhold, except the inputlayer. 
 	
 	\begin{figure}[H]
 	\centering
 	\begin{minipage}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=0.75\linewidth]{figures/log-sigmoid.png}
+	  \includegraphics[width=0.5\linewidth]{figures/log-sigmoid.png}
 	  %\captionof{figure}{log-sigmoid function}
 	  %\label{fig:log-sigmoid function}
 	\end{minipage}%
@@ -461,9 +464,9 @@ Trying to split signal and background through a variable with a cut-off value fa
 	\label{fig:log-sigmoid function}
 	\end{figure}
 	
-	In the MLP, every perceptron of a layer is connected to every perceptron of the previous and next layer. Each connection has an assigned weight, so called weight coefficient. All coefficients of one layer can be written as a weight matrix. The first and last layer are called input- and outputlayer respectively, while the intermediate layers are the hiddenlayers. A MLP has a minimum of one hiddenlayer, therefore contains at least three layers~\cite{MLP08}.
+	In the MLP, every perceptron of a layer is connected to every perceptron of the previous and next layer. Each connection has an assigned weight, a so called weight coefficient. All coefficients of one layer can be written as a weight matrix. The first and last layer are called input- and outputlayer respectively, while the intermediate layers are the hiddenlayers. A MLP has a minimum of one hiddenlayer, therefore contains at least three layers~\cite{MLP08}.
 	
-	If the signal is only transmitted in one direction, therefore the MLP doesn't have any loops, it is described as feed forward. The learning process of the model is called backpropagation algorithm. It learns by minimizing the error between network output and expexted output. Initially, all weights are assigned random values, then every event will go through the network and the weights are adapted. Either all events will be put through the network first and then the values are adapted or they are adjusted after each event, but for the latter the order of the events might be important. After one epoch the end criteria will be tested. If it fails, the whole learning process will be carried out again. If it is met, the algorithm is finished~\cite{MLP09}.
+	If the signal is only transmitted in one direction, therefore the MLP doesn't have any loops, it is described as feed forward. The learning process of the model is called backpropagation algorithm. It learns by minimizing the error between network output and expexted output. Initially, all weights are assigned random values, then every event will go through the network and the weights are adapted. Either all events will be put through the network first and then the values are adapted, or they are adjusted after each event, but for the latter the order of the events might be important. After one epoch the end criteria will be tested. If it fails, the whole learning process will be carried out again. If it is met, the algorithm is finished~\cite{MLP09}.
 	
 \begin{figure}[H]
 	\begin{center}
@@ -493,7 +496,7 @@ Trying to split signal and background through a variable with a cut-off value fa
   					\end{itemize}		
 		\end{itemize}
 		
-	A full list of all parameters, configuration options as well as their default values are given in the annex, chapter \ref{sec:annex-BDTdef} and \ref{sec:annex-MLPdef}~\cite{TMVA}.
+	A full list of all parameters, configuration options as well as their default values are given in the Annex, chapter \ref{sec:annex-BDTdef} and \ref{sec:annex-MLPdef}~\cite{TMVA}.
 	
 	These parameters were adapted to potentially improve the result:
 		\begin{itemize}
@@ -546,15 +549,15 @@ Examples for different types of ROC-curves are displayed in Figure \ref{fig:ROC_
 	
 	\subsection{Results}
 	
-	The first selection category were put into the models and are seen in Figure \ref{fig:ROC_s1_config1} - \ref{fig:ROC_s1_config3}. The ROC-curves indicate a slight improvement in the split between $t\overline{t}\gamma$- and $t\overline{t}$-events. 
+	The first set of selected variables (non-photon) were put into the models and are seen in Figure \ref{fig:ROC_s1_config1} - \ref{fig:ROC_s1_config3}. The ROC-curves indicate a slight improvement in the split between $t\overline{t}\gamma$- and $t\overline{t}$-events. 
 	
-		In the second selection category the variable PhotonGood0\_mvaID was added (Figure \ref{fig:ROC_s2_config1} - \ref{fig:ROC_s2_config3}). The result has improved, the AUC increased significantly.
+		In the second selection category, the variable PhotonGood0\_mvaID was added (Figure \ref{fig:ROC_s2_config1} - \ref{fig:ROC_s2_config3}). The result has improved, the AUC increased significantly.
 		
 		Now adding the photon variables for the third selection shows a better success in the distinction process. They can be seen in Figure \ref{fig:ROC_s3_config1} - \ref{fig:ROC_s3_config3}. 
 		
 		Between the three configuration combinations, there is only a slight difference for the MLP model, but for the BDT model there is a significant improvement in configuration 2 visible. Training- and testresults are nearly identical, so there are no signs of overfitting. The MLP model perfomed better than the BDT model for all selection categories. The third set of variables show the best result.
 				
-	\begin{figure}[H]For all selection categories
+	\begin{figure}[H]
 	\centering
 	\begin{minipage}{.5\textwidth}
 	  \centering
