Adaptions after Supervisor Feedback

--- a/Thesis/bibfile/Ref.bib
+++ b/Thesis/bibfile/Ref.bib
@@ -1,3 +1,12 @@
+@misc{CMS21,
+      title={Measurement of the inclusive and differential $\mathrm{t\overline{t}}\gamma$ cross sections in the single-lepton channel and EFT interpretation at $\sqrt{s}$ = 13 TeV}, 
+      author={CMS-Collaboration},
+      year={2021},
+      eprint={2107.01508},
+      archivePrefix={arXiv},
+      primaryClass={hep-ex}
+}
+
 @misc{TTG,
       title={Measurement of the inclusive ttgamma cross section at sqrt(s) = 7 TeV with the ATLAS detector}, 
       author={Johannes Erdmann},
@@ -23,7 +32,7 @@
 
 @misc{TMVA,
       title={TMVA - Toolkit for Multivariate Data Analysis}, 
-      author={Hoecker, Andreas and Speckmayer, Peter and Stelzer, Jörg and Therhaag , Jan and von Toerne, Eckhard and Voss , Helge and Backes, Moritz and Carli, Tancredi and Cohen, Or and Christov, Asen and Henrot-Versillé	, Sophie	and Jachowski, Matthew and Kraszewski, Kamil and Mahalalel,	 Yair and Ospanov, Rustem and Prudent,	 Xavier and Schouten, Doug and Tegenfeldt, Fredrik and Robert, Arnaud and Voigt, Alexander and Voss, Kai and Wolter, Marcin and Zemla, Andrzej},
+      author={Hoecker, Andreas and Speckmayer, Peter and Stelzer, Jörg and Therhaag , Jan and von Toerne, Eckhard and Voss , Helge and Backes, Moritz and Carli, Tancredi and Cohen, Or and et al.},
       year={2009},
       eprint={physics/0703039v5},
       archivePrefix={arXiv},
@@ -59,4 +68,19 @@ title = {Boosted Decision Trees and Applications},
 volume = {55},
 journal = {EPJ Web of Conferences},
 doi = {10.1051/epjconf/20135502004}
+}
+
+@article{CMS08,
+	doi = {10.1088/1748-0221/3/08/s08004},
+	url = {https://doi.org/10.1088/1748-0221/3/08/s08004},
+	year = 2008,
+	month = {08},
+	publisher = {{IOP} Publishing},
+	volume = {3},
+	number = {08},
+	pages = {S08004--S08004},
+	author = {CMS-Collaboration and S Chatrchyan and G Hmayakyan and V Khachatryan and A M Sirunyan and W Adam and T Bauer and T Bergauer and H Bergauer and M Dragicevic and et al.},
+	title = {The {CMS} experiment at the {CERN} {LHC}},
+	journal = {Journal of Instrumentation},
+	abstract = {The Compact Muon Solenoid (CMS) detector is described. The detector operates at the Large Hadron Collider (LHC) at CERN. It was conceived to study proton-proton (and lead-lead) collisions at a centre-of-mass energy of 14 TeV (5.5 TeV nucleon-nucleon) and at luminosities up to 1034 cm−2 s−1 (1027 cm−2 s−1). At the core of the CMS detector sits a high-magnetic-field and large-bore superconducting solenoid surrounding an all-silicon pixel and strip tracker, a lead-tungstate scintillating-crystals electromagnetic calorimeter, and a brass-scintillator sampling hadron calorimeter. The iron yoke of the flux-return is instrumented with four stations of muon detectors covering most of the 4π solid angle. Forward sampling calorimeters extend the pseudorapidity coverage to high values (|η| ⩽ 5) assuring very good hermeticity. The overall dimensions of the CMS detector are a length of 21.6 m, a diameter of 14.6 m and a total weight of 12500 t.}
 }
